-	dodano przyciski do przełączania między listami koniunkcji
-	dodano prędkości obrotowe planet wokol wlasnych osi
-	naprawiono działanie przycisku realnej skali rozmiaru planet
-	dodano Phobos i Deimos wraz z uwzględnieniem ich prędkości orbitowania wokół mars
-	poprawiono poswiaty wokół słonca i ziemii (użyłem do tego shaderów)

v19 - w trakcie
TODO raycaster (interakcje myszą)
TODO korekta liczenia pozycji
TODO domyślna dzisiejsza data w datepickerze
TODO ostylowanie interface?

v20 - finale
TODO posprzątanie kodu

TODO NAPISANIE PRACY

*** TO DO ***
- DONE dodać resztę planet 
- DONE "aura" symulująca "atmosfery planet" ZROBIONE DLA ZIEMII (ale niespecjalnie podoba mi się efekt)
- DONE nachylenia planet względem słońca 
- DONE oskryptować checkboxy pokazujące/ukrywające orbity  (do lekkich korekt)
- DONE pierścienie saturna 
- DONE pokazywanie/ukrywanie labelek planet 
- DONE opisać przycisk do realnej skali rozmiarów planet 
- DONE obsługa toggleinfobar (dla danych planet - sposob wywolania i parametry wywolania funkcji onclick)
- DONE obsługa niemożności odpauzowania animacji w momencie gdy jest pokazany asidepanel ??
- DONE możliwośc ukrycia / pokazania pasa asteroid
- DONE możliwość ukrycia / pokazania gwiazd
- DONE zmniejszenie wagi tekstur (zostawiamy wysoką jakość tekstury tylko dla ZIEMII) 
- DONE	informacje o planetach:
- DONE panel z informacjami o planetach
- DONE skala na odleglosci miedzy planetami
- DONE prędkośc obrotowa planet wokół własnych osi
- DONE naprawić przycisk realnych rozmiarów planet
- DONE księżyce, ich obroty / podróż wokół planet (możliwie najdokładniej fizycznie)
- raycaster na najazd myszą
	- podswietlenie obiektu (lub przyciemnienie) gdy mysz znajduje się nad nim
	- po kliknięciu w obiekt ma się pokazac asidepanel z informacjami o nim
	- odseparowac najazdy na pas asteroid lub gwiazdy
- rysowanie orbit przed rozpoczęciem animacji (nie mam pomysłu) ???